# SelfEdu

./: .gitignore
Patterns/DirectoryWalker/: README.md  build.sh  main.cpp
Patterns/DirectoryWalker/Filesystem/: DirectoryIterator.h  DirectoryWalker.h  File.cpp  File.h  RecursiveDirectoryIterator.cpp  RecursiveDirectoryIterator.h  StraightDirectoryIterator.cpp  StraightDirectoryIterator.h
Patterns/DirectoryWalker/docs/: classDiagram.wsd
Patterns/DirectoryWalker/src/: CMakeLists.txt
Patterns/DirectoryWalker/src/DirectoryWalker/: CMakeLists.txt  DirectoryIteratorFactory.h  DirectoryWalker.cpp  DirectoryWalker.h  FileMutator.h  FileMutatorFacadeFactory.h  FileWrapper.h  Mutator.h  SocketWrapper.h  StreamWrapper.h  StringToIteratorAdapter.h  StringToWritableAdapter.h  Utils.h  Writable.h  WritablesFactory.h  main.cpp
Patterns/DirectoryWalker/src/Filesystem/: CMakeLists.txt  DirectoryIterator.h  DirectoryWalker.cpp  File.cpp  File.h  RecursiveDirectoryIterator.cpp  RecursiveDirectoryIterator.h  StraightDirectoryIterator.cpp  StraightDirectoryIterator.h
Patterns/DirectoryWalker/src/SocketCreator/: CMakeLists.txt  main.cpp
